ingress-traefik/https-letsencrypt-HTTPChallenge/traefik-webui-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-controller
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik-ui.demo.wbitt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: http
